--- a/_config.yml
+++ b/_config.yml
@@ -597,17 +597,18 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Due to my experiences across the globe🇫🇷🇨🇭🇺🇸🇰🇷, I happen to speak fluent *English and Korean*, as well as adequate *French*. The Myers-Briggs Type Indicator test tells me that I have a personality of an *ENFJ (protagonist)*😊. Alongside my interests in computer systems 👨‍💻 some of my other interests are:
+      Due to my experiences across the globe🇫🇷🇨🇭🇺🇸🇰🇷, I happen to speak fluent *English and Korean*, and can socialize in *French*. I'm also [learning Spanish and Mandarin](https://www.duolingo.com/profile/wonooks). The Myers-Briggs Type Indicator test tells me that I have a personality of an *ENFJ (protagonist)*😊. Alongside my interests in computer systems 👨‍💻 some of my other interests are:
       - Skiing & Snowboarding ⛷🏂
       - Tennis 🎾
       - Golfing ⛳️🏌️‍♂️
+      - Brazilian Jiu-Jitsu 🤸‍♂️
       - Running 🏃‍♂️
       - Cycling 🚴‍♂️
       - Swimming 🏊‍♂️
       - My Italian motorbike 🛵
       - Photography 📷
       - Travelling 🎒✈️
-      - Fermented & distilled beverages 🍸🍷🥃
+      - Wine 🍷
       - Interior designing 🔨
       - .. and a lot more
 
