--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Won Wook SONG
-title: Ph.D. in Computer Science
+name: Wonook SONG, Ph.D.
+title: Researcher in Distributed Computer Systems for AI and Big Data
 email: wonook@apache.org
 # phone: https://tinyurl.com/WonookCV
 # phone_title: CV
